# sci-assist

./: .env.example  .gitignore  .gitmodules  DEPLOYMENT.md  FISH_SHELL_GUIDE.md  LOGGING_GUIDE.md  PRIVACY_GUIDE.md  PRIVACY_POLICY.md  PROJECT_OUTLINE.md  README.md  TESTING_CHECKLIST.md  USER_PRIVACY_GUIDE.md  alembic.ini  alembic_env_template.py  bot_control.fish  bot_control.sh  pyproject.toml  sci-assist-bot.service  setup_database.sh  setup_science_model.sh  setup_service.fish  setup_service.sh  system_prompt.example.txt  test_bot_guide.fish
ajsgptrag/: .gitignore  README.md  USAGE.md  cli.py  llm_config_examples.py  requirements.txt  setup.fish  setup.py  setup.sh  setup_ollama.fish  test_llm_backends.fish
ajsgptrag/docs/: API_DOCUMENTATION.md
ajsgptrag/examples/: demo.py
ajsgptrag/src/: __init__.py  config.py  embeddings.py  llm_interface.py  rag_system.py  vector_store.py  wikipedia_retriever.py
alembic/versions/: ccca1c017e18_initial_migration.py
assets/: README.md
scripts/: WEBHOOK_SETUP.md  daily_message.fish  daily_message_v2.fish  generate_daily_message.py  generate_daily_message_v2.py  privacy_export.py  privacy_manager.py  sci-assist-daily.service  sci-assist-daily.timer  sci-assist-watchdog.service  setup_daily_messages.fish  setup_privacy.py  setup_watchdog.fish  watchdog.fish
src/discord_llm_bot/: __about__.py  __init__.py  config.py  main.py
src/discord_llm_bot/api/: __init__.py  server.py
src/discord_llm_bot/bot/: __init__.py  client.py  commands.py  events.py
src/discord_llm_bot/conversation/: __init__.py  manager.py  memory.py
src/discord_llm_bot/database/: __init__.py  models.py  repositories.py
src/discord_llm_bot/llm/: __init__.py  client.py  models.py
src/discord_llm_bot/privacy/: __init__.py  commands.py  manager.py
src/discord_llm_bot/rag/: __init__.py  integration.py
src/discord_llm_bot/utils/: __init__.py  avatar.py  exceptions.py  logging.py
tests/: conftest.py
training_data/: response_quality_pairs.json  retention_report.json  training_conversations.json
